# Python_sandbox

./: README.md  pyproject.toml
myapp/: urls.py  views.py
mysite/: settings.py  urls.py
src/python_sandbox/: Untitled-1.ipynb  __init__.py  chemoinformatics.py  hit_and_blow.py  mind_reader.py  speech_correction.py  voice_changer.py
