[project]
name = "python-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pyaudio>=0.2.14",
    "soundfile>=0.13.1",
]

[project.scripts]
python-sandbox = "python_sandbox:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ★ここから追加・修正★
[tool.hatch.build.targets.wheel]
packages = ["src/python_sandbox"] # src ディレクトリ以下にある場合
# ★ここまで追加・修正★

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]
