[project]
name = "python-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.10" # Python 3.9を維持
dependencies = [
    "librosa", # librosaを追加。uvがPython 3.9と互換性のあるlibrosaバージョンを探します。
    # Python 3.9と互換性のある matplotlib や numpy の古いバージョンを特定し、明示的に指定する必要がある可能性があります。
    # 例: "matplotlib<3.5", "numpy<1.22" のように。
    # ただし、librosaがこれらの古いバージョンで動作するかは、librosaのリリースノートなどで確認が必要です。
    "pyaudio>=0.2.14",
    "soundfile>=0.13.1",
]

[project.scripts]
python-sandbox = "python_sandbox:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_sandbox"]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]
